--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-products></app-products>
+<h1>My Fitness App</h1>
+    <a href="/">Home</a>
+    <a href="/products">Products</a>
+<router-outlet></router-outlet>
