--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<h1>My Fitness App</h1>
-    <a href="/">Home</a>
-    <a href="/products">Products</a>
-<router-outlet></router-outlet>
+<app-products></app-products>
