Add signup component template

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,1 +1,22 @@
-<p>signup works!</p>
+<section class="signup-form">
+    <form class="container" #f="ngForm" (ngSubmit)="onSubmit(f)" color="primary">
+        <mat-form-field>
+            <input #emailInput="ngModel" type="email" matInput placeholder="Your email" ngModel name="email" email required>
+            <mat-error *ngIf="emailInput.hasError('required')">Field must not be empty</mat-error>
+            <mat-error *ngIf="!emailInput.hasError('required')">Email is invalid</mat-error>
+
+        </mat-form-field>
+        <mat-form-field hintLabel="Should be at least 6 characters long">
+            <input #pwInput="ngModel" type="password" matInput placeholder="Your password" ngModel name="password" required minlength="6">
+            <mat-hint align="end">{{pwInput.value?.length}}/6</mat-hint>
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput [matDatepicker]="picker" [max]="maxDate" ngModel name="birthdate" required>
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+        <mat-checkbox ngModel name="agree" required class="checkbox" color="primary">Agree to Terms and Conditions</mat-checkbox>
+        <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
+    </form>
+</section>
