Add adjustments to login form

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,11 +1,13 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="container" color="primary">
-    <mat-form-field>
-        <input id="userName" required type="text" matInput formControlName="userName" placeholder="Username">
-        <mat-error *ngIf="userName?.errors?.['required']">Field must not be empty</mat-error>
-    </mat-form-field>
-    <mat-form-field>
-        <input id="password" required type="text" matInput formControlName="password" placeholder="Password">
-        <mat-error *ngIf="password?.errors?.['required']">Field must not be empty</mat-error>
-    </mat-form-field>
-    <button type="submit" mat-raised-button color="primary" [disabled]="loginForm.invalid">Submit</button>
-</form>
+<section class="signup-login">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="container" color="primary">
+        <mat-form-field>
+            <input id="userName" required type="text" matInput formControlName="userName" placeholder="Username">
+            <mat-error *ngIf="userName?.errors?.['required']">Field must not be empty</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+            <input id="password" required type="text" matInput formControlName="password" placeholder="Password">
+            <mat-error *ngIf="password?.errors?.['required']">Field must not be empty</mat-error>
+        </mat-form-field>
+        <button type="submit" mat-raised-button color="primary" [disabled]="loginForm.invalid">Submit</button>
+    </form>
+</section>
