--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,37 @@
-<router-outlet></router-outlet>
+<mat-sidenav-container class="example-container">
+    <mat-sidenav #sidenav role="navigation">
+        Sidenav content
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <mat-toolbar color="primary" class="toolbar-container">
+            <div class="toolbar-button">
+                <button mat-icon-button (click)="sidenav.toggle()">
+                    <mat-icon>menu</mat-icon>
+                </button>
+            </div>
+            <div class="toolbar-logo"><a routerLink="/">LOGO</a></div>
+            <div class="toolbar-nav">
+                <ul class="navigation-items">
+                    <li>                
+                        <a routerLink="/signup">
+                            Signup
+                        </a>
+                    </li>
+                    <li>                
+                        <a routerLink="/login">
+                            Login
+                        </a>
+                    </li>
+                    <li>                
+                        <a routerLink="/training">
+                            Training
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </mat-toolbar>
+        <main>
+            <router-outlet></router-outlet>
+        </main>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
