Add responsive web design

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,7 +15,12 @@ a:hover, a:active {
 }
 
 .toolbar-button {
+    display: none;
+}
+
+.toolbar-button.is-phone-portrait {
     flex: 0 0 5%;
+    display: flex;
 }
 
 .toolbar-logo {
@@ -41,4 +46,14 @@ a {
     text-decoration: none;
     color: white;
     padding: 0 10px;
+}
+
+.nav-icon, .nav-caption {
+    vertical-align: middle;   
+    display: inline-block;
+    padding-left: 6px; 
+}
+
+.mat-icon {
+    cursor: pointer;
 }
