--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,27 @@
 <mat-sidenav-container class="example-container">
     <mat-sidenav #sidenav role="navigation">
-        Sidenav content
+        <mat-nav-list (click)="sidenav.close()">
+            <a mat-list-item routerLink="/signup">
+                <mat-icon class="nav-icon">app_registration</mat-icon>
+                <span class="nav-caption">Signup</span>
+            </a>
+            <a mat-list-item routerLink="/login">
+                <mat-icon class="nav-icon">login</mat-icon>
+                <span class="nav-caption">Login</span>
+            </a>
+            <a mat-list-item routerLink="/training">
+                <mat-icon class="nav-icon">fitness_center</mat-icon>
+                <span class="nav-caption">Training</span>
+            </a>
+            <a mat-list-item>
+                <mat-icon class="nav-icon">logout</mat-icon>
+                <span class="nav-caption">Logout</span>
+            </a>
+        </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
         <mat-toolbar color="primary" class="toolbar-container">
-            <div class="toolbar-button">
+            <div class="toolbar-button" [ngClass]="{'is-phone-portrait': isPhonePortrait}" >
                 <button mat-icon-button (click)="sidenav.toggle()">
                     <mat-icon>menu</mat-icon>
                 </button>
@@ -13,19 +30,16 @@
             <div class="toolbar-nav" [ngClass]="{'is-phone-portrait': isPhonePortrait}">
                 <ul class="navigation-items">
                     <li>                
-                        <a routerLink="/signup">
-                            Signup
-                        </a>
+                        <a routerLink="/signup">Signup</a>
                     </li>
                     <li>                
-                        <a routerLink="/login">
-                            Login
-                        </a>
+                        <a routerLink="/login">Login</a>
                     </li>
                     <li>                
-                        <a routerLink="/training">
-                            Training
-                        </a>
+                        <a routerLink="/training">Training</a>
+                    </li>
+                    <li>
+                        <a><mat-icon class="nav-icon">logout</mat-icon></a>
                     </li>
                 </ul>
             </div>
