--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <mat-sidenav-container class="example-container">
     <mat-sidenav #sidenav role="navigation">
-\        <app-sidenav-list (sidenavClose)="sidenav.close()"></app-sidenav-list>
+        <app-sidenav-list (sidenavClose)="sidenav.close()" [isPhonePortrait]="isPhonePortrait" [isTabletPortrait]="isTabletPortrait"></app-sidenav-list>
     </mat-sidenav>
     <mat-sidenav-content>
-        <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
+        <app-header (sidenavToggle)="sidenav.toggle()" [isPhonePortrait]="isPhonePortrait" [isTabletPortrait]="isTabletPortrait"></app-header>
         <main>
             <router-outlet></router-outlet>
         </main>
