--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -1,16 +1,13 @@
 <mat-toolbar color="primary" class="toolbar-container">
-    <!-- <div class="toolbar-button" [ngClass]="{'is-phone-portrait': isPhonePortrait}" > -->
-        <div class="toolbar-button">
+    <div class="toolbar-button" [ngClass]="{'is-phone-portrait': isPhonePortrait}" >
         <button mat-icon-button (click)="onToggleSidenav()">
             <mat-icon>menu</mat-icon>
         </button>
     </div>
     <div class="toolbar-logo"><a routerLink="/">LOGO</a></div>
-    <!-- <div class="toolbar-nav" [ngClass]="{'is-phone-portrait': isPhonePortrait}"> -->
-    <div class="toolbar-nav">
+    <div class="toolbar-nav" [ngClass]="{'is-phone-portrait': isPhonePortrait}">
         <ul class="navigation-items">
             <li>                
-                <!-- <a routerLink="/signup" [state]="{isPhonePortrait: isPhonePortrait}">Signup</a> -->
                 <a routerLink="/signup">Signup</a>
             </li>
             <li>                
