--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -1,7 +1,7 @@
 .welcome {
     display: flex;
     justify-content: center;
-    height: 80vh;
+    min-height: 80vh;
     align-items: center;
 }
 
