--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,1 +1,27 @@
-<p>new-training works!</p>
+<section class="new-training">
+  <mat-card>
+    <mat-card-header>
+      <h2>Time to start a workout!</h2>
+    </mat-card-header>
+    <mat-card-content>
+    <mat-form-field appearance="fill">
+      <mat-label>Favorite exercise</mat-label>
+      <mat-select>
+        <mat-option value="crunches">
+          Crunches
+        </mat-option>
+        <mat-option value="running">
+          Running
+        </mat-option>
+        <mat-option value="walking">
+          Walking
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+      <button type="submit" mat-button>Start</button>
+    </mat-card-actions>
+  </mat-card>
+</section>
+
