Add responsive service for

--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,4 +1,4 @@
-<section class="new-training">
+<section class="new-training" [ngClass]="{'is-phone-portrait': isPhonePortrait}">
   <mat-card>
     <mat-card-header>
       <h2>Time to start a workout!</h2>
