--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -20,7 +20,7 @@
     </mat-form-field>
     </mat-card-content>
     <mat-card-actions>
-      <button type="submit" mat-button>Start</button>
+      <button type="submit" class="start-training" mat-raised-button (click)="onButtonClick()" color="primary">Start</button>
     </mat-card-actions>
   </mat-card>
 </section>
