--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,17 +1,17 @@
 <mat-nav-list (click)="onCloseSidenav()">
-    <a mat-list-item routerLink="/signup">
+    <a mat-list-item  *ngIf="!isAuth" routerLink="/signup">
         <mat-icon class="nav-icon">app_registration</mat-icon>
         <span class="nav-caption">Signup</span>
     </a>
-    <a mat-list-item routerLink="/login">
+    <a mat-list-item *ngIf="!isAuth" routerLink="/login">
         <mat-icon class="nav-icon">login</mat-icon>
         <span class="nav-caption">Login</span>
     </a>
-    <a mat-list-item routerLink="/training">
+    <a mat-list-item *ngIf="isAuth" routerLink="/training">
         <mat-icon class="nav-icon">fitness_center</mat-icon>
         <span class="nav-caption">Training</span>
     </a>
-    <a mat-list-item>
+    <a mat-list-item *ngIf="isAuth">
         <mat-icon class="nav-icon">logout</mat-icon>
         <span class="nav-caption">Logout</span>
     </a>
