--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,4 +1,4 @@
-<mat-nav-list (click)="onCloseSidenav()">
+<mat-nav-list (click)="onLogout()">
     <a mat-list-item  *ngIf="!isAuth" routerLink="/signup">
         <mat-icon class="nav-icon">app_registration</mat-icon>
         <span class="nav-caption">Signup</span>
