--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,21 +1,23 @@
 <section class="new-training" [ngClass]="{'is-phone-portrait': isPhonePortrait}">
-  <mat-card>
-    <mat-card-header>
-      <h2>Time to start a workout!</h2>
-    </mat-card-header>
-    <mat-card-content>
-    <mat-form-field appearance="fill">
-      <mat-label>Favorite exercise</mat-label>
-      <mat-select>
-        <mat-option *ngFor="let exercise of availableExercises" [value]="exercise.id">
-          {{exercise.name}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-    </mat-card-content>
-    <mat-card-actions>
-      <button type="submit" class="start-training" mat-raised-button (click)="onButtonClick()" color="primary">Start</button>
-    </mat-card-actions>
-  </mat-card>
+  <form (ngSubmit)="onButtonClick(f)" #f="ngForm">
+    <mat-card>
+      <mat-card-header>
+        <h2>Time to start a workout!</h2>
+      </mat-card-header>
+      <mat-card-content>
+      <mat-form-field appearance="fill">
+        <mat-label>Choose exercise</mat-label>
+        <mat-select ngModel name="exercise" required="">
+          <mat-option *ngFor="let exercise of availableExercises" [value]="exercise.id">
+            {{exercise.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button type="submit" class="start-training" mat-raised-button [disabled]="f.invalid" color="primary">Start</button>
+      </mat-card-actions>
+    </mat-card>
+  </form>
 </section>
 
