--- a/src/app/training/past-training/past-training.component.html
+++ b/src/app/training/past-training/past-training.component.html
@@ -33,3 +33,9 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
+<mat-paginator [length]="100"
+              [pageSize]="10"
+              [pageSizeOptions]="[5, 10, 25, 100]"
+              aria-label="Select page">
+</mat-paginator>
+
