--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -8,7 +8,7 @@
       <mat-form-field appearance="fill">
         <mat-label>Choose exercise</mat-label>
         <mat-select ngModel name="exercise" required="">
-          <mat-option *ngFor="let exercise of availableExercises" [value]="exercise.id">
+          <mat-option *ngFor="let exercise of availableExercises | async" [value]="exercise.name">
             {{exercise.name}}
           </mat-option>
         </mat-select>
