Add Snackbar to handle login and signing errors

--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -4,7 +4,7 @@
             <mat-icon>menu</mat-icon>
         </button>
     </div>
-    <div class="toolbar-logo"><a routerLink="/">LOGO</a></div>
+    <div class="toolbar-logo"><a routerLink="/">NG Fitness</a></div>
     <div class="toolbar-nav" [ngClass]="{'is-phone-portrait': isPhonePortrait}">
         <ul class="navigation-items">
             <li *ngIf="!isAuth">
