Add spinner for fetching exercises

--- a/src/app/training/new-training/new-training.component.css
+++ b/src/app/training/new-training/new-training.component.css
@@ -20,3 +20,9 @@ mat-card-actions {
 .start-training {
   margin: 0 10px 10px 0;
 }
+
+.is-loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
