--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -4,17 +4,18 @@
       <mat-card-header>
         <h2>Time to start a workout!</h2>
       </mat-card-header>
-      <mat-card-content>
-      <mat-form-field appearance="fill">
-        <mat-label>Choose exercise</mat-label>
-        <mat-select ngModel name="exercise" required="">
-          <mat-option *ngFor="let exercise of availableExercises" [value]="exercise.id">
-            {{exercise.name}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+      <mat-card-content  [ngClass]="{'is-loading': isLoading}">
+        <mat-form-field *ngIf="!isLoading" appearance="fill">
+          <mat-label>Choose exercise</mat-label>
+          <mat-select ngModel name="exercise" required="">
+            <mat-option *ngFor="let exercise of availableExercises" [value]="exercise.id">
+              {{exercise.name}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-spinner *ngIf="isLoading"></mat-spinner>
       </mat-card-content>
-      <mat-card-actions>
+      <mat-card-actions *ngIf="!isLoading">
         <button type="submit" class="start-training" mat-raised-button [disabled]="f.invalid" color="primary">Start</button>
       </mat-card-actions>
     </mat-card>
