--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -5,7 +5,7 @@
         <h2>Time to start a workout!</h2>
       </mat-card-header>
       <mat-card-content  [ngClass]="{'is-loading': isLoading}">
-        <mat-form-field *ngIf="!isLoading" appearance="fill">
+        <mat-form-field *ngIf="!isLoading && availableExercises" appearance="fill">
           <mat-label>Choose exercise</mat-label>
           <mat-select ngModel name="exercise" required="">
             <mat-option *ngFor="let exercise of availableExercises" [value]="exercise.id">
@@ -16,7 +16,8 @@
         <mat-spinner *ngIf="isLoading"></mat-spinner>
       </mat-card-content>
       <mat-card-actions *ngIf="!isLoading">
-        <button type="submit" class="start-training" mat-raised-button [disabled]="f.invalid" color="primary">Start</button>
+        <button *ngIf="availableExercises" type="submit" class="start-training" mat-raised-button [disabled]="f.invalid" color="primary">Start</button>
+        <button *ngIf="!availableExercises" (click)="fetchAvailableExercises()" type="button" class="start-training" mat-raised-button color="primary">Fetch</button>
       </mat-card-actions>
     </mat-card>
   </form>
