Add training reducer

--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -5,10 +5,10 @@
         <h2>Time to start a workout!</h2>
       </mat-card-header>
       <mat-card-content  [ngClass]="{'is-loading': isLoading$ | async}">
-        <mat-form-field *ngIf="!(isLoading$ | async) && availableExercises" appearance="fill">
+        <mat-form-field *ngIf="!(isLoading$ | async) && (availableExercises$ | async)" appearance="fill">
           <mat-label>Choose exercise</mat-label>
           <mat-select ngModel name="exercise" required="">
-            <mat-option *ngFor="let exercise of availableExercises" [value]="exercise.id">
+            <mat-option *ngFor="let exercise of availableExercises$ | async" [value]="exercise.id">
               {{exercise.name}}
             </mat-option>
           </mat-select>
@@ -16,8 +16,8 @@
         <mat-spinner *ngIf="isLoading$ | async"></mat-spinner>
       </mat-card-content>
       <mat-card-actions *ngIf="!(isLoading$ | async)">
-        <button *ngIf="availableExercises" type="submit" class="start-training" mat-raised-button [disabled]="f.invalid" color="primary">Start</button>
-        <button *ngIf="!availableExercises" (click)="fetchAvailableExercises()" type="button" class="start-training" mat-raised-button color="primary">Fetch</button>
+        <button *ngIf="availableExercises$ | async" type="submit" class="start-training" mat-raised-button [disabled]="f.invalid" color="primary">Start</button>
+        <button *ngIf="!(availableExercises$ | async)" (click)="fetchAvailableExercises()" type="button" class="start-training" mat-raised-button color="primary">Fetch</button>
       </mat-card-actions>
     </mat-card>
   </form>
